Leaflet.Elevation PR merged (not released, use master)

--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "leaflet-gpx": "mpetazzoni/leaflet-gpx",
     "leaflet-search": "*",
     "leaflet-plugins": "*",
-    "leaflet-routing": "nrenner/leaflet-routing#reroute"
+    "leaflet-routing": "nrenner/leaflet-routing#reroute",
+    "Leaflet.Elevation": "MrMufflon/Leaflet.Elevation#master"
   }
 }
