--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 bower_components/leaflet-routing/libs/
+bower_components/leaflet-routing/examples/
 bower_components/Leaflet.Elevation/*
 !bower_components/Leaflet.Elevation/dist/
 !bower_components/Leaflet.Elevation/src/
