--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
     "leaflet-search": "*",
     "leaflet-plugins": "*",
     "leaflet-routing": "Turistforeningen/leaflet-routing#gh-pages",
-    "Leaflet.Elevation": "MrMufflon/Leaflet.Elevation#master"
+    "Leaflet.Elevation": "MrMufflon/Leaflet.Elevation#master",
+    "async": "*"
   }
 }
