--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,6 @@
   ],
   "dependencies": {
     "leaflet": "~0.7.3",
-    "leaflet-search": "*",
     "leaflet-plugins": "~1.3.2",
     "leaflet-routing": "Turistforeningen/leaflet-routing#gh-pages",
     "async": "~0.9.2",
@@ -16,7 +15,8 @@
     "leaflet.draw": "~0.2.3",
     "bootstrap": "~3.3.4",
     "DataTables": "~1.10.5",
-    "Leaflet.Elevation": "MrMufflon/Leaflet.Elevation#master"
+    "Leaflet.Elevation": "MrMufflon/Leaflet.Elevation#master",
+    "leaflet-control-geocoder": "~1.1.0"
   },
   "overrides": {
     "leaflet": {
@@ -24,13 +24,6 @@
         "dist/leaflet-src.js",
         "dist/leaflet.css",
         "dist/images/*.png"
-      ]
-    },
-    "leaflet-search": {
-      "main": [
-          "dist/leaflet-search.src.js",
-          "dist/leaflet-search.min.css",
-          "images/*.+(png|gif)"
       ]
     },
     "leaflet-plugins": {
@@ -66,6 +59,13 @@
     },
     "Leaflet.Elevation": {
       "dependencies": null
+    },
+    "leaflet-control-geocoder": {
+      "main": [
+        "Control.Geocoder.js",
+        "Control.Geocoder.css",
+        "images/*.+(png|gif)"
+      ]
     }
   }
 }
