--- a/bower.json
+++ b/bower.json
@@ -49,7 +49,8 @@
         "dist/leaflet.draw-src.js",
         "dist/leaflet.draw.css",
         "dist/images/*.png"
-      ]
+      ],
+      "dependencies": null
     },
     "bootstrap": {
       "main": [
