--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-concat": "^2.5.2",
     "gulp-concat-css": "^2.1.2",
     "gulp-debug": "^2.0.1",
+    "gulp-inject": "^1.2.0",
     "gulp-minify-css": "^1.0.0",
     "gulp-remember": "^0.3.0",
     "gulp-rename": "^1.2.0",
