--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "leaflet-control-geocoder": "~1.1.0",
     "Leaflet.EasyButton": "*",
     "bootbox": "~4.4.0",
-    "seiyria-bootstrap-slider": "~4.8.1"
+    "seiyria-bootstrap-slider": "~4.8.1",
+    "url-search-params": "~0.5.0"
   },
   "overrides": {
     "leaflet": {
@@ -75,6 +76,9 @@
         "Control.Geocoder.css",
         "images/*.+(png|gif)"
       ]
+    },
+    "url-search-params": {
+      "main": "build/url-search-params.js"
     }
   },
   "resolutions": {
