Replace custom Bing.js with current
Now provides file:// support and init on layer add instead of page load

--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,7 @@
   ],
   "dependencies": {
     "leaflet": "~0.7.3",
-    "leaflet-plugins": "nrenner/leaflet-plugins#https-only",
+    "leaflet-plugins": "~2.0.0",
     "leaflet-routing": "Turistforeningen/leaflet-routing#gh-pages",
     "async": "~0.9.2",
     "d3": "~3.5.5",
