--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,8 @@
     "seiyria-bootstrap-slider": "~4.8.1",
     "url-search-params": "~0.5.0",
     "Leaflet.RestoreView": "makinacorpus/Leaflet.RestoreView#master",
-    "leaflet.locatecontrol": "^0.52.0"
+    "leaflet.locatecontrol": "^0.52.0",
+    "font-awesome": "^4.6.3"
   },
   "overrides": {
     "leaflet": {
@@ -84,9 +85,16 @@
     },
     "Leaflet.RestoreView": {
       "main": "leaflet.restoreview.js"
+    },
+    "font-awesome": {
+      "main": [
+        "css/font-awesome.css",
+        "fonts/*"
+      ]
     }
   },
   "resolutions": {
-    "leaflet.elevation": "master"
+    "leaflet.elevation": "master",
+    "font-awesome": "^4.6.3"
   }
 }
