--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "gulp-sourcemaps": "^1.5.1",
     "gulp-tap": "^0.1.3",
     "gulp-uglify": "^1.1.0",
+    "gulp-if": "^2.0.0",
+    "gulp-util": "^3.0.7",
     "main-bower-files": "^2.6.2"
   }
 }
