Extends Leaflet-fullhash properly

--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,8 @@
     "leaflet.locatecontrol": "^0.60.0",
     "font-awesome": "^4.7.0",
     "bootstrap-select": "hugdx/bootstrap-select#patch-1",
-    "leaflet-sidebar": "^0.1.9"
+    "leaflet-sidebar": "^0.1.9",
+    "leaflet-fullHash": "KoGor/leaflet-fullHash#master"
   },
   "overrides": {
     "leaflet": {
@@ -96,6 +97,9 @@
         "css/font-awesome.css",
         "fonts/*"
       ]
+    },
+    "leaflet-fullHash": {
+      "main": "leaflet-fullHash.js"
     }
   }
 }
