Revert "Extends Leaflet-fullhash properly"
This reverts commit 3a06009cba7e74600bb7a1ed0c511cfa8e1c7ffc.

--- a/bower.json
+++ b/bower.json
@@ -25,8 +25,7 @@
     "leaflet.locatecontrol": "^0.60.0",
     "font-awesome": "^4.7.0",
     "bootstrap-select": "hugdx/bootstrap-select#patch-1",
-    "leaflet-sidebar": "^0.1.9",
-    "leaflet-fullHash": "KoGor/leaflet-fullHash#master"
+    "leaflet-sidebar": "^0.1.9"
   },
   "overrides": {
     "leaflet": {
@@ -97,9 +96,6 @@
         "css/font-awesome.css",
         "fonts/*"
       ]
-    },
-    "leaflet-fullHash": {
-      "main": "leaflet-fullHash.js"
     }
   }
 }
