Move custom profile in sidebar

--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,8 @@
     "leaflet.locatecontrol": "^0.60.0",
     "font-awesome": "^4.7.0",
     "bootstrap-select": "hugdx/bootstrap-select#patch-1",
-    "leaflet-sidebar": "^0.1.9"
+    "leaflet-sidebar": "^0.1.9",
+    "autosize": "^3.0.20"
   },
   "overrides": {
     "leaflet": {
@@ -98,6 +99,9 @@
         "css/font-awesome.css",
         "fonts/*"
       ]
+    },
+    "autosize": {
+      "main":  "dist/autosize.js"
     }
   }
 }
