--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,10 @@
   "name": "brouter-web",
   "version": "0.6.3",
   "main": "dist/**/*",
+  "main": [
+    "dist/brouter-web.css",
+    "dist/brouter-web.js"
+  ],
   "ignore": [
     "**/.*",
     "bower_components"
@@ -101,5 +105,8 @@
     "autosize": {
       "main":  "dist/autosize.js"
     }
+  },
+  "resolutions": {
+    "leaflet": "^1.0.3"
   }
 }
