--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "leaflet": "^1.0.3",
     "leaflet-plugins": "~3.0.0",
-    "leaflet-routing": "Turistforeningen/leaflet-routing#gh-pages",
+    "leaflet-routing": "nrenner/leaflet-routing#leaflet-1.0",
     "async": "~0.9.2",
     "d3": "~3.5.5",
     "leaflet.draw": "~0.4.9",
