--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,7 @@
     "bootstrap": "4.0.0-alpha.5",
     "DataTables": "~1.10.13",
     "leaflet.elevation": "MrMufflon/Leaflet.Elevation#master",
-    "leaflet-control-geocoder": "1.5.3",
+    "leaflet-control-geocoder": "~1.5.8",
     "Leaflet.EasyButton": "*",
     "bootbox": "~4.4.0",
     "seiyria-bootstrap-slider": "^9.8.1",
@@ -27,7 +27,7 @@
     "leaflet.locatecontrol": "^0.60.0",
     "font-awesome": "^4.7.0",
     "bootstrap-select": "hugdx/bootstrap-select#patch-1",
-    "leaflet-sidebar": "^0.1.9",
+    "leaflet-sidebar": "Turbo87/leaflet-sidebar#master",
     "autosize": "^3.0.20",
     "leaflet.editable": "^1.1.0"
   },
@@ -103,6 +103,7 @@
     }
   },
   "resolutions": {
-    "leaflet": "^1.3.1"
+    "leaflet": "^1.3.1",
+    "leaflet-sidebar": "master"
   }
 }
