--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "leaflet": "^1.3.1",
     "leaflet-plugins": "~3.0.0",
-    "leaflet-routing": "nrenner/leaflet-routing#leaflet-1.0",
+    "leaflet-routing": "nrenner/leaflet-routing#dev",
     "async": "~0.9.2",
     "d3": "~3.5.5",
     "bootstrap": "4.0.0-alpha.5",
