--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,7 @@
     "async": "~0.9.2",
     "d3": "~3.5.5",
     "bootstrap": "4.0.0-alpha.5",
-    "DataTables": "~1.10.13",
+    "DataTables": "~1.10.16",
     "leaflet.elevation": "MrMufflon/Leaflet.Elevation#master",
     "leaflet-control-geocoder": "~1.5.8",
     "Leaflet.EasyButton": "*",
@@ -27,8 +27,7 @@
     "leaflet.locatecontrol": "^0.60.0",
     "font-awesome": "^4.7.0",
     "bootstrap-select": "hugdx/bootstrap-select#patch-1",
-    "leaflet-sidebar": "Turbo87/leaflet-sidebar#master",
-    "autosize": "^3.0.20",
+    "sidebar-v2": "~0.4.0",
     "leaflet.editable": "^1.1.0"
   },
   "overrides": {
@@ -100,10 +99,15 @@
         "jquery": "*",
         "bootstrap": "*"
       }
+    },
+    "sidebar-v2": {
+      "main": [
+        "css/leaflet-sidebar.css",
+        "js/leaflet-sidebar.js"
+      ]
     }
   },
   "resolutions": {
-    "leaflet": "^1.3.1",
-    "leaflet-sidebar": "master"
+    "leaflet": "^1.3.1"
   }
 }
