Switch to customized leaflet-sidebar-v2 (WIP)
Based on leaflet-sidebar-v2 fork of sidebar-v2:
- Simpler because Leaflet-only
- autopan option
- seems more active with two contributers

Customization for brouter-web in own fork (WIP):
- hidden bar when collapsed
- flat design to match header/footer
- flexbox layout beside map instead of media breakpoints

--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,7 @@
     "leaflet.locatecontrol": "^0.60.0",
     "font-awesome": "^4.7.0",
     "bootstrap-select": "hugdx/bootstrap-select#patch-1",
-    "sidebar-v2": "~0.4.0",
+    "leaflet-sidebar-v2": "nrenner/leaflet-sidebar-v2#dev",
     "leaflet.editable": "^1.1.0"
   },
   "overrides": {
@@ -99,12 +99,6 @@
         "jquery": "*",
         "bootstrap": "*"
       }
-    },
-    "sidebar-v2": {
-      "main": [
-        "css/leaflet-sidebar.css",
-        "js/leaflet-sidebar.js"
-      ]
     }
   },
   "resolutions": {
