--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "browserslist": "> 0.5%, last 2 versions, Firefox ESR, not dead, Explorer >= 10, Android >= 4.1, Safari >= 7, iOS >= 7",
   "devDependencies": {
     "autoprefixer": "^8.1.0",
+    "bower": "^1.8.4",
     "del": "^1.1.1",
     "gulp": "^3.8.11",
     "gulp-bump": "^2.7.0",
