--- a/bower.json
+++ b/bower.json
@@ -32,7 +32,7 @@
     "leaflet.editable": "^1.1.0",
     "codemirror": "^5.35.0",
     "mapbbcode": "MapBBCode/mapbbcode#v1.2.0",
-    "@mapbox/polyline": "^0.2.0"
+    "polyline": "^0.2.0"
   },
   "overrides": {
     "leaflet": {
