--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Web client for BRouter",
   "main": "js/index.js",
   "scripts": {
+    "build": "gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
