--- a/package.json
+++ b/package.json
@@ -20,21 +20,20 @@
     "gulp": "^3.8.11",
     "gulp-bump": "^2.7.0",
     "gulp-cached": "^1.0.4",
+    "gulp-clean-css": "^4.0.0",
     "gulp-concat": "^2.5.2",
-    "gulp-concat-css": "^2.1.2",
     "gulp-confirm": "^1.0.6",
     "gulp-debug": "^2.0.1",
     "gulp-git": "^2.2.0",
     "gulp-github-release": "^1.2.1",
     "gulp-if": "^2.0.0",
     "gulp-inject": "^1.2.0",
-    "gulp-minify-css": "^1.0.0",
+    "gulp-modify-css-urls": "^2.0.0",
     "gulp-postcss": "^7.0.1",
     "gulp-remember": "^0.3.0",
     "gulp-rename": "^1.2.0",
     "gulp-replace": "^0.5.4",
     "gulp-sourcemaps": "^1.5.1",
-    "gulp-tap": "^0.1.3",
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.7",
     "gulp-zip": "^4.0.0",
