--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "mapbbcode": "MapBBCode/mapbbcode#v1.2.0",
     "seiyria-bootstrap-slider": "seiyria/bootstrap-slider#^9.8.1",
     "tether": "1.4.5",
-    "url-search-params": "~0.5.0"
+    "url-search-params": "~0.5.0",
+    "jstree": "^3.3.7"
   },
   "devDependencies": {
     "autoprefixer": "^8.1.0",
@@ -197,6 +198,13 @@
     "jquery-i18next": {
       "main": [
         "dist/umd/jquery-i18next.js"
+      ]
+    },
+    "jstree": {
+      "main": [
+        "dist/jstree.js",
+        "dist/themes/default/style.css",
+        "dist/themes/default/*.png"
       ]
     }
   }
