--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,7 @@
     "bower_components"
   ],
   "dependencies": {
-    "leaflet": "^1.3.3",
+    "leaflet": "~1.3.0",
     "leaflet-plugins": "~3.0.0",
     "leaflet-routing": "nrenner/leaflet-routing#dev",
     "async": "~0.9.2",
