--- a/package.json
+++ b/package.json
@@ -13,9 +13,35 @@
   },
   "license": "MIT",
   "browserslist": "> 0.5%, last 2 versions, Firefox ESR, not dead, Explorer >= 10, Android >= 4.1, Safari >= 7, iOS >= 7",
+  "dependencies": {
+    "@mapbox/polyline": "^0.2.0",
+    "async": "~0.9.2",
+    "bootbox": "~4.4.0",
+    "bootstrap": "4.0.0-alpha.5",
+    "bootstrap-select": "hugdx/bootstrap-select#patch-1",
+    "codemirror": "^5.35.0",
+    "d3": "~3.5.5",
+    "datatables": "~1.10.16",
+    "font-awesome": "^4.7.0",
+    "jquery": "3.3.1",
+    "leaflet": "~1.3.0",
+    "leaflet-control-geocoder": "~1.5.8",
+    "leaflet-easybutton": "*",
+    "leaflet-editable": "^1.1.0",
+    "leaflet-elevation": "MrMufflon/Leaflet.Elevation#master",
+    "leaflet-plugins": "~3.0.0",
+    "leaflet-routing": "nrenner/leaflet-routing#dev",
+    "leaflet-sidebar-v2": "nrenner/leaflet-sidebar-v2#dev",
+    "leaflet.locatecontrol": "^0.60.0",
+    "leaflet.restoreview": "makinacorpus/Leaflet.RestoreView#master",
+    "leaflet.stravasegments": "*",
+    "mapbbcode": "MapBBCode/mapbbcode#v1.2.0",
+    "seiyria-bootstrap-slider": "seiyria/bootstrap-slider#^9.8.1",
+    "tether": "1.4.5",
+    "url-search-params": "~0.5.0"
+  },
   "devDependencies": {
     "autoprefixer": "^8.1.0",
-    "bower": "^1.8.4",
     "del": "^1.1.1",
     "gulp": "^3.8.11",
     "gulp-bump": "^2.7.0",
@@ -37,6 +63,118 @@
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.7",
     "gulp-zip": "^4.0.0",
-    "main-bower-files": "^2.6.2"
+    "npmfiles": "^0.1.1"
+  },
+  "overrides": {
+    "leaflet": {
+      "main": [
+        "dist/leaflet-src.js",
+        "dist/leaflet.css",
+        "dist/images/*.png"
+      ]
+    },
+    "leaflet-plugins": {
+      "main": [
+        "layer/tile/Bing.js"
+      ]
+    },
+    "leaflet-routing": {
+      "main": [
+        "src/utils/LineUtil.Snapping.js",
+        "src/utils/Marker.Snapping.js",
+        "src/L.Routing.js",
+        "src/L.Routing.Draw.js",
+        "src/L.Routing.Edit.js"
+      ]
+    },
+    "leaflet-sidebar-v2": {
+      "main": [
+        "js/leaflet-sidebar.js",
+        "css/leaflet-sidebar.css"
+      ]
+    },    
+    "leaflet-easybutton": {
+      "main": [
+        "src/easy-button.js",
+        "src/easy-button.css"
+      ]
+    },    
+    "bootstrap-select": {
+      "main": [
+        "js/bootstrap-select.js",
+        "dist/css/bootstrap-select.css"
+      ]
+    },
+    "datatables": {
+      "main": [
+        "media/**"
+      ]
+    },
+    "codemirror": {
+      "main": [
+        "lib/**"
+      ]
+    },
+    "bootstrap": {
+      "main": [
+        "dist/js/bootstrap.js",
+        "dist/css/bootstrap.css"
+      ]
+    },
+    "leaflet-elevation": {
+      "main": [
+        "dist/leaflet.elevation-0.0.4.src.js",
+        "dist/leaflet.elevation-0.0.4.css",
+        "dist/images/*.png"
+      ],
+      "dependencies": null
+    },
+    "leaflet.stravasegments": {
+      "main": [
+        "dist/leaflet-triangle-marker.js",
+        "dist/L.StravaSegments.js"
+      ]
+    },
+    "leaflet-control-geocoder": {
+      "main": [
+        "dist/Control.Geocoder.js",
+        "dist/Control.Geocoder.css",
+        "images/*.+(png|gif)"
+      ]
+    },
+    "url-search-params": {
+      "main": "build/url-search-params.js"
+    },
+    "Leaflet.RestoreView": {
+      "main": "leaflet.restoreview.js"
+    },
+    "font-awesome": {
+      "main": [
+        "css/font-awesome.css",
+        "fonts/*"
+      ]
+    },
+    "leaflet.locatecontrol": {
+      "main": [
+        "src/L.Control.Locate.js",
+        "dist/L.Control.Locate.css"
+      ]
+    },
+    "autosize": {
+      "main": "dist/autosize.js"
+    },
+    "seiyria-bootstrap-slider": {
+      "main": [ 
+        "dist/bootstrap-slider.js",
+        "dist/css/bootstrap-slider.css"
+      ],
+      "dependencies": {
+        "jquery": "*",
+        "bootstrap": "*"
+      }
+    },
+    "mapbbcode": {
+      "main": "src/controls/PermalinkAttribution.js"
+    }
   }
 }
