--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "js/index.js",
   "scripts": {
     "build": "gulp",
+    "transifex-push": "gulp i18next && tx push --source",
+    "transifex-pull": "tx pull --all --minimum-perc 1",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,7 +25,11 @@
     "d3": "~3.5.5",
     "datatables": "~1.10.16",
     "font-awesome": "^4.7.0",
+    "i18next": "^15.0.4",
+    "i18next-browser-languagedetector": "^3.0.1",
+    "i18next-xhr-backend": "^2.0.1",
     "jquery": "3.3.1",
+    "jquery-i18next": "^1.2.1",
     "leaflet": "~1.3.0",
     "leaflet-control-geocoder": "~1.5.8",
     "leaflet-easybutton": "*",
@@ -32,9 +38,10 @@
     "leaflet-plugins": "~3.0.0",
     "leaflet-routing": "nrenner/leaflet-routing#dev",
     "leaflet-sidebar-v2": "nrenner/leaflet-sidebar-v2#dev",
+    "leaflet-triangle-marker": "^1.0.1",
     "leaflet.locatecontrol": "^0.60.0",
     "leaflet.restoreview": "makinacorpus/Leaflet.RestoreView#master",
-    "leaflet.stravasegments": "*",
+    "leaflet.stravasegments": "^2.0.3",
     "mapbbcode": "MapBBCode/mapbbcode#v1.2.0",
     "seiyria-bootstrap-slider": "seiyria/bootstrap-slider#^9.8.1",
     "tether": "1.4.5",
@@ -63,6 +70,7 @@
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.7",
     "gulp-zip": "^4.0.0",
+    "i18next-scanner": "^2.9.1",
     "npmfiles": "^0.1.1"
   },
   "overrides": {
@@ -92,13 +100,13 @@
         "js/leaflet-sidebar.js",
         "css/leaflet-sidebar.css"
       ]
-    },    
+    },
     "leaflet-easybutton": {
       "main": [
         "src/easy-button.js",
         "src/easy-button.css"
       ]
-    },    
+    },
     "bootstrap-select": {
       "main": [
         "js/bootstrap-select.js",
@@ -129,12 +137,6 @@
       ],
       "dependencies": null
     },
-    "leaflet.stravasegments": {
-      "main": [
-        "dist/leaflet-triangle-marker.js",
-        "dist/L.StravaSegments.js"
-      ]
-    },
     "leaflet-control-geocoder": {
       "main": [
         "dist/Control.Geocoder.js",
@@ -148,6 +150,9 @@
     "Leaflet.RestoreView": {
       "main": "leaflet.restoreview.js"
     },
+    "leaflet.stravasegments": {
+      "main": "index.js"
+    },
     "font-awesome": {
       "main": [
         "css/font-awesome.css",
@@ -160,11 +165,8 @@
         "dist/L.Control.Locate.css"
       ]
     },
-    "autosize": {
-      "main": "dist/autosize.js"
-    },
     "seiyria-bootstrap-slider": {
-      "main": [ 
+      "main": [
         "dist/bootstrap-slider.js",
         "dist/css/bootstrap-slider.css"
       ],
@@ -175,6 +177,26 @@
     },
     "mapbbcode": {
       "main": "src/controls/PermalinkAttribution.js"
+    },
+    "i18next": {
+      "main": [
+        "dist/umd/i18next.js"
+      ]
+    },
+    "i18next-xhr-backend": {
+      "main": [
+        "dist/umd/i18nextXHRBackend.js"
+      ]
+    },
+    "i18next-browser-languagedetector": {
+      "main": [
+        "dist/umd/i18nextBrowserLanguageDetector.js"
+      ]
+    },
+    "jquery-i18next": {
+      "main": [
+        "dist/umd/jquery-i18next.js"
+      ]
     }
   }
 }
