--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "i18next-xhr-backend": "^2.0.1",
     "jquery": "3.3.1",
     "jquery-i18next": "^1.2.1",
+    "jstree": "^3.3.7",
     "leaflet": "~1.3.0",
     "leaflet-control-geocoder": "~1.5.8",
     "leaflet-easybutton": "*",
     "leaflet-editable": "^1.1.0",
     "leaflet-elevation": "MrMufflon/Leaflet.Elevation#master",
     "leaflet-plugins": "~3.0.0",
+    "leaflet-providers": "^1.5.0",
     "leaflet-routing": "nrenner/leaflet-routing#dev",
     "leaflet-sidebar-v2": "nrenner/leaflet-sidebar-v2#dev",
     "leaflet-triangle-marker": "^1.0.1",
@@ -46,8 +48,7 @@
     "mapbbcode": "MapBBCode/mapbbcode#v1.2.0",
     "seiyria-bootstrap-slider": "seiyria/bootstrap-slider#^9.8.1",
     "tether": "1.4.5",
-    "url-search-params": "~0.5.0",
-    "jstree": "^3.3.7"
+    "url-search-params": "~0.5.0"
   },
   "devDependencies": {
     "autoprefixer": "^8.1.0",
