Extract all into file per layer, concatenate to single file

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "gulp",
     "transifex-push": "gulp i18next && tx push --source",
     "transifex-pull": "tx pull --all --minimum-perc 1 --force && (git add locales/*.json && git commit locales/*.json -m 'Update translations' || true)",
+    "layers": "node layers/josm/extract.js && node layers/collection/extract.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -68,13 +69,14 @@
     "gulp-modify-css-urls": "^2.0.0",
     "gulp-postcss": "^7.0.1",
     "gulp-remember": "^0.3.0",
-    "gulp-rename": "^1.2.0",
+    "gulp-rename": "^1.4.0",
     "gulp-replace": "^0.5.4",
     "gulp-sourcemaps": "^1.5.1",
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.7",
     "gulp-zip": "^4.0.0",
     "i18next-scanner": "^2.9.1",
+    "node-fetch": "^2.3.0",
     "npmfiles": "^0.1.1"
   },
   "overrides": {
