--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "leaflet-control-geocoder": "~1.5.8",
     "leaflet-easybutton": "*",
     "leaflet-editable": "^1.1.0",
-    "leaflet-elevation": "MrMufflon/Leaflet.Elevation#master",
+    "leaflet-elevation": "opoto/Leaflet.Elevation#master",
     "leaflet-plugins": "~3.0.0",
     "leaflet-providers": "^1.5.0",
     "leaflet-routing": "nrenner/leaflet-routing#dev",
