--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
         "@mapbox/polyline": "^0.2.0",
         "@turf/turf": "^5.1.6",
         "async": "~0.9.2",
-        "bootbox": "~4.4.0",
-        "bootstrap": "4.0.0-alpha.5",
-        "bootstrap-select": "hugdx/bootstrap-select#patch-1",
+        "bootbox": "~5.1.3",
+        "bootstrap": "4.3.1",
+        "bootstrap-select": "1.13.0",
         "codemirror": "^5.35.0",
         "d3": "~3.5.5",
         "datatables": "~1.10.16",
@@ -139,6 +139,11 @@
         "codemirror": {
             "main": [
                 "lib/**"
+            ]
+        },
+        "bootbox": {
+            "main": [
+                "src/bootbox.all.js"
             ]
         },
         "bootstrap": {
