Remove pre-push hook (#187), build now run by Travis after push/PR

--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     },
     "husky": {
         "hooks": {
-            "pre-commit": "pretty-quick --bail",
-            "pre-push": "gulp"
+            "pre-commit": "pretty-quick --bail"
         }
     },
     "repository": {
