--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "license": "MIT",
     "browserslist": "> 0.5%, last 2 versions, Firefox ESR, not dead, Explorer >= 10, Android >= 4.1, Safari >= 7, iOS >= 7",
     "dependencies": {
+        "@bagage/leaflet.restoreview": "1.0.1",
         "@mapbox/polyline": "^0.2.0",
         "@turf/turf": "^5.1.6",
         "async": "~0.9.2",
         "bootbox": "~5.1.3",
         "bootstrap": "4.3.1",
         "bootstrap-select": "1.13.0",
+        "bootstrap-slider": "^9.8.1",
         "codemirror": "^5.35.0",
         "d3": "~3.5.5",
         "datatables": "~1.10.16",
@@ -50,12 +52,10 @@
         "leaflet-sidebar-v2": "nrenner/leaflet-sidebar-v2#dev",
         "leaflet-triangle-marker": "^1.0.1",
         "leaflet.locatecontrol": "^0.60.0",
-        "leaflet.restoreview": "makinacorpus/Leaflet.RestoreView#master",
         "leaflet.snogylop": "^0.4.0",
         "leaflet.stravasegments": "2.3.2",
         "mapbbcode": "MapBBCode/mapbbcode#v1.2.0",
         "promise-polyfill": "^8.1.0",
-        "seiyria-bootstrap-slider": "seiyria/bootstrap-slider#^9.8.1",
         "tether": "1.4.5",
         "url-search-params": "~0.5.0",
         "whatwg-fetch": "^3.0.0"
@@ -170,9 +170,6 @@
         "url-search-params": {
             "main": "build/url-search-params.js"
         },
-        "Leaflet.RestoreView": {
-            "main": "leaflet.restoreview.js"
-        },
         "leaflet.stravasegments": {
             "main": "dist/index.js"
         },
@@ -188,7 +185,7 @@
                 "dist/L.Control.Locate.css"
             ]
         },
-        "seiyria-bootstrap-slider": {
+        "bootstrap-slider": {
             "main": [
                 "dist/bootstrap-slider.js",
                 "dist/css/bootstrap-slider.css"
