--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
         "leaflet-control-geocoder": "1.8.2",
         "leaflet-easybutton": "*",
         "leaflet-editable": "^1.1.0",
-        "leaflet-elevation": "opoto/Leaflet.Elevation#master",
+        "leaflet-elevation": "nrenner/Leaflet.Elevation#dev",
         "leaflet-plugins": "~3.0.0",
         "leaflet-providers": "^1.5.0",
         "leaflet-routing": "nrenner/leaflet-routing#dev",
