--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "leaflet-routing": "nrenner/leaflet-routing#dev",
         "leaflet-sidebar-v2": "nrenner/leaflet-sidebar-v2#dev",
         "leaflet-triangle-marker": "^1.0.1",
+        "leaflet.awesome-markers": "^2.0.5",
         "leaflet.locatecontrol": "^0.60.0",
         "leaflet.snogylop": "^0.4.0",
         "leaflet.stravasegments": "2.3.2",
@@ -174,6 +175,13 @@
         },
         "leaflet.stravasegments": {
             "main": "dist/index.js"
+        },
+        "leaflet.awesome-markers": {
+            "main": [
+                "dist/leaflet.awesome-markers.js",
+                "dist/leaflet.awesome-markers.css",
+                "dist/images/*.png"
+            ]
         },
         "font-awesome": {
             "main": [
