--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "leaflet-easybutton": "*",
         "leaflet-editable": "^1.1.0",
         "leaflet-elevation": "nrenner/Leaflet.Elevation#dev",
+        "leaflet-geometryutil": "^0.9.1",
         "leaflet-plugins": "~3.0.0",
         "leaflet-providers": "^1.5.0",
         "leaflet-routing": "nrenner/leaflet-routing#dev",
