Replace large awesome-markers with smaller vector-markers

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "@mapbox/polyline": "^0.2.0",
         "@mapbox/togeojson": "^0.16.0",
         "@turf/turf": "^5.1.6",
+        "Leaflet.vector-markers": "nrenner/Leaflet.vector-markers#2ef80c9",
         "async": "~0.9.2",
         "bootbox": "~5.3.4",
         "bootstrap": "4.3.1",
@@ -66,7 +67,6 @@
         "leaflet-routing": "nrenner/leaflet-routing#b00813f",
         "leaflet-sidebar-v2": "nrenner/leaflet-sidebar-v2#dev",
         "leaflet-triangle-marker": "^1.0.1",
-        "leaflet.awesome-markers": "^2.0.5",
         "leaflet.locatecontrol": "^0.60.0",
         "leaflet.snogylop": "^0.4.0",
         "leaflet.stravasegments": "2.3.2",
@@ -192,13 +192,6 @@
         "leaflet.stravasegments": {
             "main": "dist/index.js"
         },
-        "leaflet.awesome-markers": {
-            "main": [
-                "dist/leaflet.awesome-markers.js",
-                "dist/leaflet.awesome-markers.css",
-                "dist/images/*.png"
-            ]
-        },
         "font-awesome": {
             "main": [
                 "css/font-awesome.css",
@@ -254,6 +247,12 @@
         "promise-polyfill": {
             "main": [
                 "dist/polyfill.js"
+            ]
+        },
+        "Leaflet.vector-markers": {
+            "main": [
+                "dist/leaflet-vector-markers.js",
+                "dist/leaflet-vector-markers.css"
             ]
         }
     }
