--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
         "gulp-zip": "^4.0.0",
         "husky": "^2.3.0",
         "i18next-scanner": "^2.9.1",
+        "merge-stream": "^2.0.0",
         "node-fetch": "^2.3.0",
         "npmfiles": "^0.1.1",
         "prettier": "^1.17.1",
