--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "test": "gulp",
         "lint": "eslint .",
         "prettier": "prettier --write '**/*'",
-        "serve": "gulp serve watch"
+        "serve": "gulp serve watch",
+        "standalone": "mvn clean install -f ../brouter -pl '!brouter-routing-app' -Dmaven.javadoc.skip=true && ../brouter/misc/scripts/generate_profile_variants.sh && gulp release:zip_standalone"
     },
     "husky": {
         "hooks": {
