--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
         "leaflet.stravasegments": "2.3.2",
         "mapbbcode": "MapBBCode/mapbbcode#v1.2.0",
         "osmtogeojson": "^3.0.0-beta.4",
+        "overpass-layer": "^3.0.0",
         "regenerator-runtime": "^0.13.7",
         "togpx": "^0.5.4",
         "topojson-client": "^3.1.0",
@@ -276,6 +277,11 @@
         "core-js-bundle": {
             "main": [
                 "minified.js"
+            ]
+        },
+        "overpass-layer": {
+            "main": [
+                "dist/overpass-layer.js"
             ]
         }
     }
